Fixed alignment

--- a/style.css
+++ b/style.css
@@ -6,20 +6,22 @@
 	.bg-blue,
 	.bg-white {
 		flex-direction: column;
-		row-gap: 0;
+		justify-content: center;
+		align-items: center;
+	}
+	.placeholder {
+		display: none;
 	}
 }
 
 /* Desktop & tablets */
 @media only screen and (min-width: 600px) {
-	.card-text {
+	.card-body {
 		font-size: 1.2rem;
 		line-height: 1.8rem;
-		max-width: 40rem;
 	}
-	.bg-blue,
-	.bg-white {
-		flex-direction: row;
+	.placeholder {
+		width: 100%;
 	}
 }
 
@@ -48,15 +50,16 @@ article {
 	padding: 3rem 2rem;
 	height: 100vh;
 	display: flex;
-	justify-content: center;
 	align-items: center;
 }
-.bg-blue,
-.bg-white {
-	/* display: flex; */
+.bg-white .card-body {
+	width: 100%;
 }
-.card-body {
-	width: 100vh;
+.bg-blue .card-body {
+	flex: 0 0 auto;
+}
+.card-text {
+	max-width: 40rem;
 }
 img {
 	display: block;
